[package]
authors = ["bRad <brad@humanenginuity.com>"]
categories = []
edition = "2018"
keywords = []
license = "MIT or Apache-2.0"
name = "bgk"
readme = "README.md"
repository = "https://github.com/u007d/bgk"
version = "0.1.0"

[dependencies]
derive_more = "*"

[dev-dependencies]
pretty_assertions = "*"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
